test new data aug and more single model

--- a/notebooks/cnn_5_data_aug_1_add_earlystopping.ipynb
+++ b/notebooks/cnn_5_data_aug_1_add_earlystopping.ipynb
@@ -1032,9 +1032,10 @@
     "        curr_x,curr_y = train_x[train_index],y[train_index]\n",
     "        val_x,val_y = train_x[test_index],y[test_index]\n",
     "        datagen = ImageDataGenerator(\n",
-    "            width_shift_range=0.2,\n",
-    "            height_shift_range=0.2,\n",
+    "            width_shift_range=0.05,\n",
+    "            height_shift_range=0.05,\n",
     "            shear_range=0.2,\n",
+    "            zoom_range=0.2,\n",
     "            horizontal_flip=True,\n",
     "            vertical_flip=True\n",
     "        )\n",
@@ -1104,7 +1105,9 @@
     "# add zoom 0.231\n",
     "# rm zoom rm flip 0.228\n",
     "# only ud flip 0.230\n",
-    "# both ud lr flip 0.230"
+    "# both ud lr flip 0.230\n",
+    "\n",
+    "# pre 230"
    ]
   }
  ],
