--- a/notebooks/inception_resnet_data_aug_2_deep.ipynb
+++ b/notebooks/inception_resnet_data_aug_2_deep.ipynb
@@ -1294,7 +1294,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
