--- a/notebooks/xgb_ensemble-all.ipynb
+++ b/notebooks/xgb_ensemble-all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -10,22 +10,29 @@
      "output_type": "stream",
      "text": [
       "'../features/cnn_1_aug1_feat.pkl'\n",
+      "'../features/cnn_1_aug_rescale_preprocess_feat.pkl'\n",
       "'../features/cnn_1_feat.pkl'\n",
       "'../features/cnn_2_aug1_feat.pkl'\n",
+      "'../features/cnn_2_aug_rescale_preprocess_feat.pkl'\n",
       "'../features/cnn_2_feat.pkl'\n",
       "'../features/cnn_3_aug1_feat.pkl'\n",
+      "'../features/cnn_3_aug_rescale_preprocess_feat.pkl'\n",
       "'../features/cnn_4_aug1_feat.pkl'\n",
       "'../features/cnn_4_aug1_feat_add_early.pkl'\n",
+      "'../features/cnn_4_aug_rescale_preprocess_feat.pkl'\n",
       "'../features/cnn_5_aug1_feat.pkl'\n",
+      "'../features/cnn_5_aug_rescale_preprocess_feat.pkl'\n",
       "'../features/incept_1_feat.pkl'\n",
       "'../features/incept_aug1_feat.pkl'\n",
       "'../features/incept_aug2_feat.pkl'\n",
       "'../features/incept_aug3_feat.pkl'\n",
+      "'../features/incept_aug4_feat.pkl'\n",
       "'../features/other_feat.pkl'\n",
       "'../features/resnet_1_feat.pkl'\n",
       "'../features/resnet_aug1_feat.pkl'\n",
       "'../features/resnet_aug2_feat.pkl'\n",
       "'../features/resnet_aug3_feat.pkl'\n",
+      "'../features/resnet_aug4_feat.pkl'\n",
       "'../features/vgg16_1_feat.pkl'\n",
       "'../features/vgg_aug1_feat.pkl'\n"
      ]
@@ -45,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1604, 29) (8424, 29) (1604,)\n"
+      "(1604, 36) (8424, 36) (1604,)\n"
      ]
     }
    ],
@@ -76,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +128,7 @@
     "        # train model\n",
     "        m = xgb.train(params, d_train, 500, watchlist, \n",
     "                        early_stopping_rounds=30,\n",
-    "                        verbose_eval=100)\n",
+    "                        verbose_eval=1000)\n",
     "        \n",
     "        # cal val loss\n",
     "        curr_val_loss = log_loss(y_test,m.predict(d_valid))\n",
@@ -164,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {
     "scrolled": false
    },
@@ -173,136 +180,208 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.640042\tvalid-logloss:0.64132\n",
+      "[0]\ttrain-logloss:0.638398\tvalid-logloss:0.643453\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.085731\tvalid-logloss:0.150959\n",
       "Stopping. Best iteration:\n",
-      "[106]\ttrain-logloss:0.081826\tvalid-logloss:0.150418\n",
+      "[84]\ttrain-logloss:0.08021\tvalid-logloss:0.172183\n",
       "\n",
-      "[0]\ttrain-logloss:0.640553\tvalid-logloss:0.638461\n",
+      "[0]\ttrain-logloss:0.639398\tvalid-logloss:0.640432\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.095044\tvalid-logloss:0.107113\n",
-      "[200]\ttrain-logloss:0.049733\tvalid-logloss:0.096345\n",
-      "[300]\ttrain-logloss:0.029752\tvalid-logloss:0.092553\n",
       "Stopping. Best iteration:\n",
-      "[363]\ttrain-logloss:0.0228\tvalid-logloss:0.089514\n",
+      "[125]\ttrain-logloss:0.061936\tvalid-logloss:0.170911\n",
       "\n",
-      "[0]\ttrain-logloss:0.639406\tvalid-logloss:0.643287\n",
+      "[0]\ttrain-logloss:0.639719\tvalid-logloss:0.639525\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.084865\tvalid-logloss:0.15522\n",
       "Stopping. Best iteration:\n",
-      "[146]\ttrain-logloss:0.061016\tvalid-logloss:0.149694\n",
+      "[80]\ttrain-logloss:0.091392\tvalid-logloss:0.167787\n",
       "\n",
-      "[0]\ttrain-logloss:0.638513\tvalid-logloss:0.644778\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.075919\tvalid-logloss:0.210096\n",
-      "Stopping. Best iteration:\n",
-      "[104]\ttrain-logloss:0.073728\tvalid-logloss:0.207897\n",
-      "\n",
-      "[0]\ttrain-logloss:0.640215\tvalid-logloss:0.643263\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.079411\tvalid-logloss:0.182036\n",
-      "Stopping. Best iteration:\n",
-      "[78]\ttrain-logloss:0.094687\tvalid-logloss:0.181436\n",
-      "\n",
-      "local average valid loss 0.157322195894 val loss std 0.0396900553041\n",
+      "local average valid loss 0.174422652688 val loss std 0.00242673360562\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.018407\n",
-      "1  4023181e    0.864245\n",
-      "2  b20200e4    0.049624\n",
-      "3  e7f018bb    0.998522\n",
-      "4  4371c8c3    0.120860\n",
+      "0  5941774d    0.022542\n",
+      "1  4023181e    0.861197\n",
+      "2  b20200e4    0.029474\n",
+      "3  e7f018bb    0.997296\n",
+      "4  4371c8c3    0.160665\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.016861\n",
-      "1  4023181e    0.872074\n",
-      "2  b20200e4    0.057109\n",
-      "3  e7f018bb    0.998686\n",
-      "4  4371c8c3    0.119924\n"
+      "0  5941774d    0.022839\n",
+      "1  4023181e    0.861831\n",
+      "2  b20200e4    0.029813\n",
+      "3  e7f018bb    0.997298\n",
+      "4  4371c8c3    0.161904\n"
      ]
     }
    ],
    "source": [
-    "cv_test(5,233,True)"
+    "cv_test(3,42,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.638593\tvalid-logloss:0.642662\n",
+      "[0]\ttrain-logloss:0.638881\tvalid-logloss:0.644057\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.080479\tvalid-logloss:0.17592\n",
       "Stopping. Best iteration:\n",
-      "[120]\ttrain-logloss:0.068915\tvalid-logloss:0.175046\n",
+      "[85]\ttrain-logloss:0.085495\tvalid-logloss:0.183752\n",
       "\n",
-      "[0]\ttrain-logloss:0.639811\tvalid-logloss:0.643053\n",
+      "[0]\ttrain-logloss:0.639651\tvalid-logloss:0.642653\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.086819\tvalid-logloss:0.148765\n",
-      "[200]\ttrain-logloss:0.046474\tvalid-logloss:0.140681\n",
       "Stopping. Best iteration:\n",
-      "[231]\ttrain-logloss:0.039025\tvalid-logloss:0.139519\n",
+      "[205]\ttrain-logloss:0.041422\tvalid-logloss:0.14161\n",
       "\n",
-      "[0]\ttrain-logloss:0.639192\tvalid-logloss:0.641799\n",
+      "[0]\ttrain-logloss:0.639546\tvalid-logloss:0.641129\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.082562\tvalid-logloss:0.197983\n",
       "Stopping. Best iteration:\n",
-      "[72]\ttrain-logloss:0.10018\tvalid-logloss:0.196842\n",
+      "[113]\ttrain-logloss:0.068945\tvalid-logloss:0.199612\n",
       "\n",
-      "[0]\ttrain-logloss:0.640642\tvalid-logloss:0.641553\n",
+      "[0]\ttrain-logloss:0.640131\tvalid-logloss:0.641364\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.086455\tvalid-logloss:0.157605\n",
       "Stopping. Best iteration:\n",
-      "[113]\ttrain-logloss:0.079137\tvalid-logloss:0.154515\n",
+      "[128]\ttrain-logloss:0.065329\tvalid-logloss:0.152875\n",
       "\n",
-      "[0]\ttrain-logloss:0.640437\tvalid-logloss:0.642039\n",
+      "[0]\ttrain-logloss:0.639924\tvalid-logloss:0.640402\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.08538\tvalid-logloss:0.163915\n",
       "Stopping. Best iteration:\n",
-      "[82]\ttrain-logloss:0.096481\tvalid-logloss:0.16227\n",
+      "[61]\ttrain-logloss:0.112036\tvalid-logloss:0.161372\n",
       "\n",
-      "local average valid loss 0.168410517084 val loss std 0.0183947082158\n",
+      "local average valid loss 0.169693937907 val loss std 0.0213117584252\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.020507\n",
-      "1  4023181e    0.885462\n",
-      "2  b20200e4    0.057458\n",
-      "3  e7f018bb    0.997676\n",
-      "4  4371c8c3    0.110026\n",
+      "0  5941774d    0.024325\n",
+      "1  4023181e    0.902789\n",
+      "2  b20200e4    0.039840\n",
+      "3  e7f018bb    0.997576\n",
+      "4  4371c8c3    0.166235\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.020809\n",
-      "1  4023181e    0.887769\n",
-      "2  b20200e4    0.060703\n",
-      "3  e7f018bb    0.997791\n",
-      "4  4371c8c3    0.114359\n"
+      "0  5941774d    0.024080\n",
+      "1  4023181e    0.904678\n",
+      "2  b20200e4    0.041006\n",
+      "3  e7f018bb    0.997627\n",
+      "4  4371c8c3    0.173510\n"
      ]
     }
    ],
    "source": [
     "cv_test(5,42,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.638387\tvalid-logloss:0.643955\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[118]\ttrain-logloss:0.070075\tvalid-logloss:0.200934\n",
+      "\n",
+      "[0]\ttrain-logloss:0.639031\tvalid-logloss:0.641597\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[119]\ttrain-logloss:0.074503\tvalid-logloss:0.150752\n",
+      "\n",
+      "[0]\ttrain-logloss:0.639539\tvalid-logloss:0.640894\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[126]\ttrain-logloss:0.067473\tvalid-logloss:0.159865\n",
+      "\n",
+      "[0]\ttrain-logloss:0.639553\tvalid-logloss:0.640654\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[166]\ttrain-logloss:0.056543\tvalid-logloss:0.112712\n",
+      "\n",
+      "[0]\ttrain-logloss:0.63907\tvalid-logloss:0.642722\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[58]\ttrain-logloss:0.112296\tvalid-logloss:0.217283\n",
+      "\n",
+      "[0]\ttrain-logloss:0.639347\tvalid-logloss:0.641854\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[162]\ttrain-logloss:0.055967\tvalid-logloss:0.15669\n",
+      "\n",
+      "[0]\ttrain-logloss:0.639086\tvalid-logloss:0.640893\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[144]\ttrain-logloss:0.061494\tvalid-logloss:0.176276\n",
+      "\n",
+      "[0]\ttrain-logloss:0.639907\tvalid-logloss:0.639867\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[137]\ttrain-logloss:0.066012\tvalid-logloss:0.111683\n",
+      "\n",
+      "[0]\ttrain-logloss:0.639567\tvalid-logloss:0.640325\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[101]\ttrain-logloss:0.083687\tvalid-logloss:0.164728\n",
+      "\n",
+      "[0]\ttrain-logloss:0.639895\tvalid-logloss:0.639507\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[84]\ttrain-logloss:0.094869\tvalid-logloss:0.16055\n",
+      "\n",
+      "local average valid loss 0.166153132547 val loss std 0.0317077536741\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.020909\n",
+      "1  4023181e    0.893976\n",
+      "2  b20200e4    0.047755\n",
+      "3  e7f018bb    0.997828\n",
+      "4  4371c8c3    0.181071\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.020419\n",
+      "1  4023181e    0.894793\n",
+      "2  b20200e4    0.051093\n",
+      "3  e7f018bb    0.997941\n",
+      "4  4371c8c3    0.181945\n"
+     ]
+    }
+   ],
+   "source": [
+    "cv_test(10,42,True)"
    ]
   }
  ],
