--- a/notebooks/xgb_ensemble.ipynb
+++ b/notebooks/xgb_ensemble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -17,8 +17,13 @@
       "'../features/incept_aug2_feat.pkl',\n",
       "'../features/cnn_1_aug1_feat.pkl',\n",
       "'../features/resnet_1_feat.pkl',\n",
+      "'../features/cnn_5_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/incept_aug4_feat.pkl',\n",
+      "'../features/resnet_aug4_feat.pkl',\n",
+      "'../features/cnn_4_aug_rescale_preprocess_feat.pkl',\n",
       "'../features/cnn_3_aug1_feat.pkl',\n",
       "'../features/cnn_2_aug1_feat.pkl',\n",
+      "'../features/cnn_3_aug_rescale_preprocess_feat.pkl',\n",
       "'../features/cnn_2_feat.pkl',\n",
       "'../features/cnn_4_aug1_feat.pkl',\n",
       "'../features/cnn_4_aug1_feat_add_early.pkl',\n",
@@ -27,7 +32,9 @@
       "'../features/resnet_aug3_feat.pkl',\n",
       "'../features/incept_aug3_feat.pkl',\n",
       "'../features/vgg_aug1_feat.pkl',\n",
-      "'../features/resnet_aug2_feat.pkl',\n"
+      "'../features/cnn_2_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/resnet_aug2_feat.pkl',\n",
+      "'../features/cnn_1_aug_rescale_preprocess_feat.pkl',\n"
      ]
     }
    ],
@@ -45,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +161,7 @@
     "        # train model\n",
     "        m = xgb.train(params, d_train, 500, watchlist, \n",
     "                        early_stopping_rounds=30,\n",
-    "                        verbose_eval=100)\n",
+    "                        verbose_eval=1009)\n",
     "        \n",
     "        # cal val loss\n",
     "        curr_val_loss = log_loss(y_test,m.predict(d_valid))\n",
@@ -197,8 +204,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 13,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.639092\tvalid-logloss:0.643238\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[119]\ttrain-logloss:0.07035\tvalid-logloss:0.163011\n",
+      "\n",
+      "[0]\ttrain-logloss:0.640488\tvalid-logloss:0.639944\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[81]\ttrain-logloss:0.098805\tvalid-logloss:0.165829\n",
+      "\n",
+      "[0]\ttrain-logloss:0.640431\tvalid-logloss:0.64091\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[104]\ttrain-logloss:0.082493\tvalid-logloss:0.163925\n",
+      "\n",
+      "local average valid loss 0.166895443887 val loss std 0.00172757630585\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.039962\n",
+      "1  4023181e    0.787347\n",
+      "2  b20200e4    0.008393\n",
+      "3  e7f018bb    0.997585\n",
+      "4  4371c8c3    0.061940\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.040202\n",
+      "1  4023181e    0.787793\n",
+      "2  b20200e4    0.008420\n",
+      "3  e7f018bb    0.997588\n",
+      "4  4371c8c3    0.062332\n"
+     ]
+    }
+   ],
+   "source": [
+    "cv_test(3,42,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -208,7 +267,6 @@
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.085426\tvalid-logloss:0.16726\n",
       "Stopping. Best iteration:\n",
       "[159]\ttrain-logloss:0.059304\tvalid-logloss:0.158494\n",
       "\n",
@@ -216,8 +274,6 @@
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.094006\tvalid-logloss:0.139332\n",
-      "[200]\ttrain-logloss:0.05262\tvalid-logloss:0.127287\n",
       "Stopping. Best iteration:\n",
       "[217]\ttrain-logloss:0.047615\tvalid-logloss:0.124558\n",
       "\n",
@@ -225,7 +281,6 @@
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.0877\tvalid-logloss:0.181453\n",
       "Stopping. Best iteration:\n",
       "[128]\ttrain-logloss:0.072304\tvalid-logloss:0.178184\n",
       "\n",
@@ -233,7 +288,6 @@
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.092235\tvalid-logloss:0.164564\n",
       "Stopping. Best iteration:\n",
       "[117]\ttrain-logloss:0.082179\tvalid-logloss:0.163715\n",
       "\n",
@@ -241,7 +295,6 @@
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.090572\tvalid-logloss:0.149255\n",
       "Stopping. Best iteration:\n",
       "[83]\ttrain-logloss:0.100543\tvalid-logloss:0.148211\n",
       "\n",
@@ -267,74 +320,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.64014\tvalid-logloss:0.640318\n",
+      "[0]\ttrain-logloss:0.640299\tvalid-logloss:0.644735\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.088416\tvalid-logloss:0.149747\n",
       "Stopping. Best iteration:\n",
-      "[131]\ttrain-logloss:0.071451\tvalid-logloss:0.146607\n",
+      "[148]\ttrain-logloss:0.066444\tvalid-logloss:0.176749\n",
       "\n",
-      "[0]\ttrain-logloss:0.640654\tvalid-logloss:0.639231\n",
+      "[0]\ttrain-logloss:0.639776\tvalid-logloss:0.64181\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.101951\tvalid-logloss:0.102936\n",
-      "[200]\ttrain-logloss:0.056535\tvalid-logloss:0.08979\n",
       "Stopping. Best iteration:\n",
-      "[223]\ttrain-logloss:0.050506\tvalid-logloss:0.087753\n",
+      "[185]\ttrain-logloss:0.058884\tvalid-logloss:0.144427\n",
       "\n",
-      "[0]\ttrain-logloss:0.639738\tvalid-logloss:0.642165\n",
+      "[0]\ttrain-logloss:0.640106\tvalid-logloss:0.641654\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.090744\tvalid-logloss:0.149501\n",
       "Stopping. Best iteration:\n",
-      "[143]\ttrain-logloss:0.070482\tvalid-logloss:0.141893\n",
+      "[168]\ttrain-logloss:0.0634\tvalid-logloss:0.132382\n",
       "\n",
-      "[0]\ttrain-logloss:0.639705\tvalid-logloss:0.6448\n",
+      "[0]\ttrain-logloss:0.640288\tvalid-logloss:0.643088\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.08022\tvalid-logloss:0.204312\n",
       "Stopping. Best iteration:\n",
-      "[116]\ttrain-logloss:0.071852\tvalid-logloss:0.202973\n",
+      "[191]\ttrain-logloss:0.056821\tvalid-logloss:0.113952\n",
       "\n",
-      "[0]\ttrain-logloss:0.640024\tvalid-logloss:0.641508\n",
+      "[0]\ttrain-logloss:0.640163\tvalid-logloss:0.643046\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.087234\tvalid-logloss:0.184681\n",
       "Stopping. Best iteration:\n",
-      "[80]\ttrain-logloss:0.098531\tvalid-logloss:0.18189\n",
+      "[131]\ttrain-logloss:0.073937\tvalid-logloss:0.18924\n",
       "\n",
-      "local average valid loss 0.155035006782 val loss std 0.0404901689146\n",
+      "[0]\ttrain-logloss:0.640484\tvalid-logloss:0.64197\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[220]\ttrain-logloss:0.050064\tvalid-logloss:0.135035\n",
+      "\n",
+      "[0]\ttrain-logloss:0.640277\tvalid-logloss:0.641467\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[116]\ttrain-logloss:0.082653\tvalid-logloss:0.186062\n",
+      "\n",
+      "[0]\ttrain-logloss:0.640989\tvalid-logloss:0.641694\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[84]\ttrain-logloss:0.104992\tvalid-logloss:0.129232\n",
+      "\n",
+      "[0]\ttrain-logloss:0.640637\tvalid-logloss:0.639867\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[76]\ttrain-logloss:0.110037\tvalid-logloss:0.15026\n",
+      "\n",
+      "[0]\ttrain-logloss:0.640845\tvalid-logloss:0.639688\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[192]\ttrain-logloss:0.054263\tvalid-logloss:0.150098\n",
+      "\n",
+      "local average valid loss 0.154266612699 val loss std 0.0243853126574\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.015397\n",
-      "1  4023181e    0.816671\n",
-      "2  b20200e4    0.013512\n",
-      "3  e7f018bb    0.998398\n",
-      "4  4371c8c3    0.073509\n",
+      "0  5941774d    0.021957\n",
+      "1  4023181e    0.771701\n",
+      "2  b20200e4    0.019678\n",
+      "3  e7f018bb    0.998608\n",
+      "4  4371c8c3    0.054753\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.014148\n",
-      "1  4023181e    0.817814\n",
-      "2  b20200e4    0.014077\n",
-      "3  e7f018bb    0.998590\n",
-      "4  4371c8c3    0.074269\n"
+      "0  5941774d    0.021953\n",
+      "1  4023181e    0.768805\n",
+      "2  b20200e4    0.020650\n",
+      "3  e7f018bb    0.998646\n",
+      "4  4371c8c3    0.055951\n"
      ]
     }
    ],
    "source": [
-    "cv_test(5,233,True)"
+    "cv_test(10,42,True)"
    ]
   }
  ],
