--- a/notebooks/cnn_3_data_aug_1.ipynb
+++ b/notebooks/cnn_3_data_aug_1.ipynb
@@ -800,10 +800,10 @@
     "        curr_x,curr_y = train_x[train_index],y[train_index]\n",
     "        val_x,val_y = train_x[test_index],y[test_index]\n",
     "        datagen = ImageDataGenerator(\n",
-    "            width_shift_range=0.2,\n",
-    "            height_shift_range=0.2,\n",
+    "            width_shift_range=0.05,\n",
+    "            height_shift_range=0.05,\n",
     "            shear_range=0.2,\n",
-    "            #zoom_range=0.05,\n",
+    "            zoom_range=0.2,\n",
     "            horizontal_flip=True,\n",
     "            vertical_flip=True\n",
     "        )\n",
@@ -868,7 +868,8 @@
     "submission['id']=test_df['id']\n",
     "submission['is_iceberg']=test_pred\n",
     "print(submission.head())\n",
-    "submission.to_csv('../results/cnn_3_aug1_sub.csv', index=False)"
+    "submission.to_csv('../results/cnn_3_aug1_sub.csv', index=False)\n",
+    "# pre 228"
    ]
   }
  ],
